# Presence-Tracker

./: .env.example  .gitignore  README.md  bt-agent.service  docker-compose.yml  package.json  presence_tracker.py  pyproject.toml  setup.sh
.github/workflows/: deploy-website.yml
convex/: auth.ts  crons.ts  devices.ts  integrations.ts  logs.ts  notifications.ts  schema.ts
convex/_generated/: api.d.ts
frontend/: app.js  auth.js  config.js  entrypoint.sh  index.html  integrations.js  logs.js  server.js  style.css
logs/: bluetooth_scanner.log.1
rust-agent/: Cargo.toml
rust-agent/src/: api_server.rs  bluetooth_agent.rs  bluetooth_probe.rs  config.rs  convex_client.rs  lib.rs  main.rs  presence_loop.rs
src/: bluetooth_agent.py  bluetooth_scanner.py  logging_utils.py  presence_tracker.py
