[project]
name = "ieee-presence-tracker"
version = "0.1.0"
description = "Bluetooth-based presence detection system using Convex backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "convex>=0.4.0",
    "python-dotenv>=1.0.0",
    "pybluez @ git+https://github.com/pybluez/pybluez.git",
    "flask>=3.0.0",
    "dbus-python>=1.3.2",
    "PyGObject>=3.48.0,<3.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
