[package]
name = "presence-tracker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bluer = { version = "0.17", features = ["bluetoothd"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
wiremock = "0.6"
